switch to libconfig with fine-tunable settings

--- a/recess.cfg
+++ b/recess.cfg
@@ -1,2 +1,7 @@
-# chance for libcalls to fail
-FAIL_CHANCE=10
+# fallback chance if method specific setting wasn't found
+default = 10
+
+# malloc family
+malloc = 15
+calloc = 20
+realloc = 30
